--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
     "antd": "^5.22.2",
+    "lucide-react": "^0.462.0",
     "mongoose": "^8.8.3",
     "next": "14.2.14",
     "react": "^18",
